Fix: flicker in kroki

--- a/src/components/elements/kroki/kroki.scss
+++ b/src/components/elements/kroki/kroki.scss
@@ -20,7 +20,6 @@
 			border: 2px solid $white-100;
 			border-radius: 50%;
 			position: absolute;
-			transform: translate(-50%, -50%);
 			height: 16px;
 			width: 16px;
 			z-index: 10;
@@ -30,9 +29,8 @@
 			background-color: $silver-100;
 			border-radius: 50%;
 			position: absolute;
-			transform: translate(-50%, -50%);
-			height: 0;
-			width: 0;
+			height: 16px;
+			width: 16px;
 			opacity: 0;
 			animation: pulse 6s ease-out infinite;
 		}
