--- a/src/styles/configs/keyframes.scss
+++ b/src/styles/configs/keyframes.scss
@@ -1,14 +1,12 @@
 @keyframes pulse {
 
 	0% {
-		width: 0;
-		height: 0;
+		transform: scale(1);
 		opacity: 1;
 	}
 
 	50%, 100% {
-		width: 80px;
-		height: 80px;
+		transform: scale(6);
 		opacity: 0;
 	}
 
